src/test/resources/syntax/invalid/group_definition_int_constant_for_class.unpick
unpick v3
const Class
    0 = 0